WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
267284
[WebGPU] api,validation,image_copy,* is failing
https://bugs.webkit.org/show_bug.cgi?id=267284
Summary
[WebGPU] api,validation,image_copy,* is failing
Mike Wyrzykowski
Reported
2024-01-09 10:51:57 PST
[WebGPU] api,validation,image_copy,* is failing
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-01-09 10:52:21 PST
<
rdar://problem/120726665
>
Mike Wyrzykowski
Comment 2
2024-01-29 21:04:06 PST
Pull request:
https://github.com/WebKit/WebKit/pull/23490
Mike Wyrzykowski
Comment 3
2024-02-04 22:44:25 PST
Pull request:
https://github.com/WebKit/WebKit/pull/23845
EWS
Comment 4
2024-02-07 16:55:53 PST
Committed
274257@main
(bb2f1af0dcab): <
https://commits.webkit.org/274257@main
> Reviewed commits have been landed. Closing PR #23845 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug