[WebGPU] api,validation,image_copy,* is failing https://bugs.webkit.org/show_bug.cgi?id=267284 <radar://120726665>

Reviewed by NOBODY (OOPS!).

Having api,validation,image_copy,* pass is tracked by
https://bugs.webkit.org/show_bug.cgi?id=267284

Right now, apply a smaller set of changes such
that running the test does not crash the GPU process.

* Source/WebGPU/WebGPU/CommandEncoder.mm:
(WebGPU::CommandEncoder::copyBufferToTexture):
(WebGPU::CommandEncoder::copyTextureToBuffer):
* Source/WebGPU/WebGPU/Queue.mm:
(WebGPU::Queue::writeTexture):
* Source/WebGPU/WebGPU/Texture.mm:
(WebGPU::Texture::aspectSpecificFormat):