Source/WebGPU/WebGPU/Queue.h
@@ -42,6 +42,7 @@ namespace WebGPU {
 class Buffer;
 class CommandBuffer;
 class Device;
+class Texture;
 
 // https://gpuweb.github.io/gpuweb/#gpuqueue
 // A device owns its default queue, not the other way around.
@@ -94,6 +95,7 @@ private:
 
     // This can be called on a background thread.
     void scheduleWork(Instance::WorkItem&&);
+    NSString* errorValidatingWriteTexture(const WGPUImageCopyTexture&, const WGPUTextureDataLayout&, const WGPUExtent3D&, size_t, const Texture&) const;
 
     id<MTLCommandQueue> m_commandQueue { nil };
     id<MTLCommandBuffer> m_commandBuffer { nil };
